Update local state, zip state, load balancer, route 53 of techlab management

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/environment/poc/local_state
-/environment/poc/.terraform
-# /environment/poc/.terraform.lock.hcl
+/environments/poc/local_state
+/environments/poc/.terraform
+# /environmens/poc/.terraform.lock.hcl
 
 .env
 .DS_Store
